RESOLVED FIXED139624
Ruby overhang uses ints instead of floats
https://bugs.webkit.org/show_bug.cgi?id=139624
Summary Ruby overhang uses ints instead of floats
Myles C. Maxfield
Reported 2014-12-13 13:45:57 PST
See RenderRubyRun::getOverhang()
Attachments
Patch (672.69 KB, patch)
2014-12-16 13:46 PST, Myles C. Maxfield
hyatt: review+
buildbot: commit-queue-
Archive of layout-test-results from ews107 for mac-mountainlion-wk2 (991.72 KB, application/zip)
2014-12-16 14:33 PST, Build Bot
no flags
Archive of layout-test-results from ews103 for mac-mountainlion (993.51 KB, application/zip)
2014-12-16 14:36 PST, Build Bot
no flags
Myles C. Maxfield
Comment 1 2014-12-16 13:46:25 PST
Dave Hyatt
Comment 2 2014-12-16 13:47:29 PST
Comment on attachment 243388 [details] Patch r=me
Build Bot
Comment 3 2014-12-16 14:33:11 PST
Comment on attachment 243388 [details] Patch Attachment 243388 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/5253269886599168 New failing tests: fast/writing-mode/Kusa-Makura-background-canvas.html
Build Bot
Comment 4 2014-12-16 14:33:15 PST
Created attachment 243396 [details] Archive of layout-test-results from ews107 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 5 2014-12-16 14:36:08 PST
Comment on attachment 243388 [details] Patch Attachment 243388 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6614031490088960 New failing tests: fast/writing-mode/Kusa-Makura-background-canvas.html
Build Bot
Comment 6 2014-12-16 14:36:11 PST
Created attachment 243397 [details] Archive of layout-test-results from ews103 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Myles C. Maxfield
Comment 7 2014-12-16 14:52:34 PST
Radar WebKit Bug Importer
Comment 8 2014-12-17 17:43:02 PST
Note You need to log in before you can comment on or make changes to this bug.